--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,10 +10,13 @@
   box-sizing: border-box;
   font-family: "Manrope", sans-serif;
 }
+body {
+  overflow-x: hidden;
+}
 
 /* START: General styles */
 .max-width {
-  @apply max-w-[1400px] mx-auto;
+  @apply max-w-[1200px] mx-auto;
 }
 
 .padding-x {
@@ -39,11 +42,11 @@
 
 /* START: Hero styles */
 .hero {
-  @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1400px] mx-auto;
+  @apply flex xl:flex-row flex-col xl:gap-5 relative -z-10 max-w-[1200px] mx-auto;
 }
 
 .hero__title {
-  @apply 2xl:text-[72px] sm:text-[64px] text-[50px] font-extrabold;
+  @apply 2xl:text-[74px] sm:text-[58px] text-[50px]  font-extrabold;
 }
 
 .hero__subtitle {
@@ -51,7 +54,7 @@
 }
 
 .hero__image-container {
-  @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
+  @apply xl:flex-[1.5] flex justify-end items-end w-screen xl:h-screen -z-10 overflow-x-hidden;
 }
 
 .hero__image {
@@ -59,7 +62,7 @@
 }
 
 .hero__image-overlay {
-  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
+  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4 bg-hero-bg bg-repeat-round -z-10 w-[100%] xl:h-screen h-[590px];
 }
 /* END: Hero styles */
 
@@ -70,7 +73,7 @@
 }
 
 .home__filters {
-  @apply mt-12 w-full flex-between items-center flex-wrap gap-5;
+  @apply mt-12  w-full flex justify-between items-center flex-wrap gap-5 sm:px-3 md:px-10;
 }
 
 .home__filter-container {
@@ -78,7 +81,7 @@
 }
 
 .home__cars-wrapper {
-  @apply grid 2xl:grid-cols-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 w-full gap-8 pt-14;
+  @apply grid mx-auto 2xl:grid-cols-4 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 w-[90%] gap-8 pt-14;
 }
 
 .home__error-container {
@@ -92,7 +95,7 @@
 }
 
 .car-card__content {
-  @apply w-full flex justify-between items-start gap-2;
+  @apply w-full flex flex-col justify-between items-start gap-2;
 }
 
 .car-card__content-title {
@@ -128,7 +131,7 @@
 }
 
 .car-card__btn-container {
-  @apply hidden group-hover:flex absolute bottom-0 w-full z-10;
+  @apply hidden group-hover:flex absolute bottom-0 left-0 w-full z-10;
 }
 /* END: Car Card styles */
 
